# Hybrid-Self-Healing-Agent

./: .gitignore
self_heal_engine/: .gitignore  Dockerfile  README.md  pyproject.toml
self_heal_engine/.github/workflows/: ci.yml
self_heal_engine/data/: training.jsonl
self_heal_engine/docs/: APEX_INTEGRATION.md  ARCHITECTURE.md  OPERATION.md
self_heal_engine/examples/: HealingHelper.java
self_heal_engine/src/self_heal_engine/: __init__.py  app.py  heuristics.py  hierarchy_search.py  llm_adapter.py  main.py  model_inference.py  parser.py  ranker.py  storage.py  train_ranker.py  verify.py
self_heal_engine/tests/: test_app.py  test_heuristics.py  test_hierarchy_search.py  test_integration.py  test_parser.py
