[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "self-heal-engine"
version = "1.0.0"
description = "Self-healing test automation locator engine"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "lightgbm>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/veerabvm/Hybrid-Self-Healing-Agent"
Repository = "https://github.com/veerabvm/Hybrid-Self-Healing-Agent"
Documentation = "https://self-heal-engine.readthedocs.io/"

[tool.hatch.build.targets.wheel]
packages = ["src/self_heal_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
